# Screen-space-ambient-occlusion

./: .gitignore  CMakeLists.txt
cmake/Modules/: FindFreeImagePlus.cmake  FindGLEW.cmake  FindGLFW.cmake  FindSOIL.cmake
include/: controls.h  gbuffer.h  texture.h  tiny_obj_loader.h
shaders/: Blur.frag  GeometryPass.frag  GeometryPass.vert  LightPass.frag  LightPass.vert  Passthrough.frag  Passthrough.vert  Quad.vert  SSAO.frag  StandardShading.frag  StandardShading.fragmentshader  StandardShading.vert
src/: controls.cpp  gbuffer.cpp  main.cpp  texture.cpp  tiny_obj_loader.cpp
